crates/ferrum-interfaces/tests/ui/vnext/fail/operation_oracle_result_is_not_deserialize.rs
use ferrum_interfaces::vnext::OperationOracleResult;

fn main() {
    let _: OperationOracleResult = serde_json::from_str("{}").unwrap();
}
